Fix navbar icon mobile

--- a/src/utils/component/navbar.css
+++ b/src/utils/component/navbar.css
@@ -36,3 +36,13 @@
   opacity: 0;
   transform: translate(100%, 0px);
 }
+
+/* Handle icon navbar mobile */
+
+.navbar_menu-button.w-nav-button.w--open .navbar_menu-icon-open {
+  display: none;
+}
+
+.navbar_menu-button.w-nav-button.w--open .navbar_menu-icon-close {
+  display: block;
+}
